assets/stylesheets/paleolithic.css
/* @override http://localhost:8080/assets/stylesheets/paleolithic.css */

* { margin: 0; padding: 0; }

body
{
    font-family: Tahoma;
    font-size: 1em;
    color: #FFFFFF;
    margin-top: 0 !important;
    margin-left: 1em;
    margin-right: 1em;
    padding-top: 0;
    /* background: #000000 url("/assets/images/bg.gif") repeat 0 0; */
    background: #000000;
}

h1
{
    padding-top: 0.3em;
    padding-left: 0.8em;
    text-align: left;
    font-family: sans-serif;
}

.header_link
{
    font-family: Georgia, "Times New Roman", Times, serif;
    text-shadow: #666666 0px 3px 2px;
}

.header_link:link, .header_link:visited
{
    color: #FFFFFF;
    text-decoration: none;
}

.header_link:hover, .header_link:active
{
    color: #0000FF;
    text-decoration: underline;
}

h2
{
    margin-top: -10px;
    text-align: right;
    border-bottom: 2px solid;
    border-color: #5b5b5b;
	font: italic small-caps 0.8em Georgia, "Times New Roman", Times, serif;
}

div.header
{
    background-color: #222222;
    background-image: url("/assets/images/stonehenge_header.jpg");
    background-repeat: no-repeat;
    height:314px;
    width:1024px;
    margin-left: auto;
    margin-right: auto;
}

div.site_title
{
    opacity: 0.5;
    background: #000000;
}

div.post, #main_content
{
    padding-top:0.5em;
    margin-right: auto;
    padding-left: 1em;
    width: 70%;
    background-color: #111111;
}

div.post {
    background: url("/assets/images/bg.gif") repeat 0 0;
}

#rightbar
{
    background-color: #222222;
    width: 30%;
    padding-top:0.5em;
    margin-right: 1em;
    margin-left: auto;
}


div.post_header {
    width: 100%;
    padding-left: 0.5em;
    padding-bottom: 1em;
}

div.post span.title
{
    width: 80%;
    text-align: left;
    color: #FFFF44;
	font: 2.2em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	
}

span.title a:link, a:visited
{
	color: #FFFFAA;
	text-decoration: none;
}

span.title a:hover, a:active
{
    color: #0000FF;
    text-decoration: underline;
}

div.post span.date
{
    width: 40%;
    font-size: 0.8em;
    font-style: italic;
    display: block;
	color: #bbb;
}

#site_content
{
    width: 1024px;
    margin-left: auto;
    margin-right: auto;
    background-color: #333333;
}

div.post div.content
{
    font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
    clear: both;
    text-align: justify;
    font-size: 1.1em;
    margin-right: 10px;
    margin-top: 3em;
    margin-left: 10px;
}

div.post div.comments
{
    margin-top: 2em;
    margin-left: 0.5em;
}

div.post div.comments span
{
    font-size: 0.8em;
    color: #FF4444;
    font-style: italic;
}

div.post div.comments p
{
    display: block;
    font-style: italic;
    margin-top: 1em;
}

div.post div.post_footer
{
    margin-top: 1em;
    /* border-top: solid 1px; */
    margin-bottom: 0.5em;
}

/* Comment box */

div.comment_form
{
    font-family: verdana;
    border-style: none;
    border-width: 2px;
    margin-top: 2em;
}

div.content form
{
    background: #AAAAAA url("/assets/images/bkg_main.jpg") repeat-x scroll 0;
    width: 27em;
    margin: 1em;
}

div.comment_form span
{
    margin:0.3em 0;
    padding-right: 1em;
    padding-left: 1em;
}

div.comment_form legend
{
    padding-bottom: 2em;
}

div.comment_form label
{
    width: 10%;
    text-align: right;
    padding-right: 2em;
    padding-left: 2em;
    float: left;
}

div.comment_form input
{
    padding:0.15em;
    witdh: 10em;
    /* -moz-border-radius:0.4em; */
    /* -khtml-border-radius:0.4em; */
    height: 2.5em;
    width: 25em;
}

textarea#comment_area
{
    width: 40em;
    height: 20em;
}

span.buttons
{
    padding: 5px;
}

span.buttons input
{
    color: black;
    margin: 1em;
    width: 10em;
    height: 2em;
    background-color: grey;
    font: normal 0.8em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	border: 1px solid white;
}

span.buttons input:hover
{
	border: 1px solid red;
}

/* Error messages */
div#error_block
{
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    border: 2px white solid;
    background: #550000;
    top:50%;
    min-width: 400px;
    overflow: auto;
}

